implementando o endereco, Telefone, Editora e criar o neum de genero